syntax = "proto3";

option csharp_namespace = "Bidder.Infastructure.Common.Protos.Common";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package BidGrpcServiceCommon;

message GetBidRoomGrpcRequest {
  string Id = 1;
}

message GetBidRoomsGrpcResponse {
  int64 RoomId = 1;
  string BidId = 2; 
  google.protobuf.Timestamp BidEndDate = 3;
  int32 BidStatus = 4;
}
message GetActiveBidRoomsGrpcResponse {
    repeated ActiveBidRoomGrpcResponse ActiveBidRooms = 1;
}

message ActiveBidRoomGrpcResponse {
        string BidId = 1;
        int64 RoomId = 2;
        int32 BidStatus = 3;
        google.protobuf.Timestamp BidEndDate = 4;
        string Title = 5;
        string Description = 6;
        string OwnerId = 7;
} 

message GetActiveBidRoomGrpcRequest {
    string BidId = 1;
}

message UpdateBidRoomStatusGrpcRequest {
    int64 RoomId = 1;
    int32 RoomStatus = 2;    
}

message UpdateBidRoomStatusGrpcResponse {
    int64 RoomId = 1;
    int32 RoomStatus = 2;    
}